# transcar

./: .appveyor.yml  .coveragerc  .gitignore  .mypy.ini  .travis.yml  CMakeLists.txt  CheckOutput.py  DATCAR_spectrum.asc  LICENSE.txt  MonoenergeticBeams.py  README.md  README.rst  RunTranscar.py  SpectrumBeam.py  build.py  flux.csv  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  setup_parallel.sh  transcar_run.py
.github/workflows/: ci_unix.yml
archive/: .travis.yml  README.md  beamRunner.sh  checkoutcome.sh  old_run_beams_single.sh  old_runbeams2014Apr14.sh  prerun.sh  run_beams_parallel.sh  transcar_run.sh
dir.data/dir.linux/dir.cine/: DATDEG  FELTRANS
dir.data/dir.linux/dir.projection/: essai.f
dir.data/dir.unix/dir.cine/: DATDEG  DATTRANS
dir.extraction/: extraction.f  extraction.make
dir.input/: DATCAR
dir.mfiles/: big2little.m  convert.m  cp4.m  trace_conv.m  tube.m  tube_path.m
dir.source/: CMakeLists.txt  Makefile  reacrates.f  transconvec_13.op.f
dir.source/dir.cine/: CMakeLists.txt  conduc.f  dE_dt.f  felin.op.f  flux_val.f  iniflu.f  lect.f  linsub.f  low_proton.f  misc.f  prec_time.f  prot.f  quel_flux.f  quelle_grille.f  trans.op.f  transelec.op.f
dir.source/dir.cine/dir.iri/: irif12.f  iris12.f
dir.source/dir.convection/: CMakeLists.txt  conjonction.f  convec.f  fte.f  trace_fte.f  tube.f
dir.source/dir.fluide/: CMakeLists.txt  atmos.op.f  coskhi.f  courant_time.f  fchap.f  jour_mois.f  msis90.f  vent.f
dir.source/dir.fluide/archives/: contenu.f
dir.source/dir.geomag/: CMakeLists.txt  ap2kp.f  geo2mag.f  lec_indices.f90  magfild.f  shellig.f
dir.source/dir.imm/: CMakeLists.txt  Drive11.f  IMM.f  IMM2.f90  IMM_routines.f90  Marche1.f  Potentiel1.f  testcoef.f
dir.source/dir.include/: CHEMIN.INC  CMakeLists.txt  TRANSPORT.INC  comm.f  comm.f90  comm_dp.f  comm_sp.f
dir.source/dir.numeric/: CMakeLists.txt  lcpfct.f  stabenerg.f90
dir.source/dir.projection/: CMakeLists.txt  coef_cour.f  coef_pot.f  coef_prec.f  courant.f90  potentiel.f90  precipitation.f90  projection.f90  val_fit.f90
dir.source/dir.system/: isnan.f90  pwd.f
dir.source/optimisation/: continuite.f  continuite.f90  momentum.f  momentum.f90
dir.transcar.server/: BT_E1E2prev.csv  beamRunner.sh  checkoutcome.sh  loop_beams.sh  prerun.sh  run_beams2014Apr14.sh  run_beams_parallel.sh  run_transcar.sh  transcar_run.py  transcar_run.sh  transconvec_13.op.out
dir.transcar.server/dir.extraction/: extraction.f  extraction.make
dir.transcar.server/dir.include/: chemin.inc
dir.transcar.server/dir.input/: DATCAR  DATCAR~
dir.transcar.server/dir.mfiles/: big2little.m  tube.m
dir.transcar.server/dir.source/: Makefile  reacrates.f  transcar.make  transconvec_13.op.f
dir.transcar.server/dir.source/dir.cine/: cineout.op.f  conduc.f  dE_dt.f  degrad.f  disort.f  ecr.f  felin.op.f  flux_val.f  hardelec.f  hardion.f  iniflu.f  lect.f  linsub.f  low_proton.f  misc.f  prec_time.f  prot.f  quel_flux.f  quelle_grille.f  solflux.f  trans.op.f
dir.transcar.server/dir.source/dir.convection/: conjonction.f  convec.f  convec_1.f  fte.f  phi_time.f  trace_fte.f  tube.f
dir.transcar.server/dir.source/dir.imm/: IMM.f  (+5 more)
legacyScripts/: checkoutcome.sh  filehandles.txt  transcar_run.sh
matlabshared/: E_t_spectrogram.m  E_t_spectrogram_sersio.m  IS_spectrum.m  RunCalcAurora.m  beamDirLister.m  calc_aurora.m  calc_conductivity.m  comp_zc.m  composition_sondrestrom.m  create_precinput.m  data_tra.m  estimate_Emag.m  fluxes.m  giveno.m  herrorbar.m  interpolateTRANSCAR.m  intexp2.m  intrap.m  inv_waldteufel_Fi.m  isr.m  isread_fitted.m  isread_rawne.m  maxwellian_fluxes.m  meberg.m  multi_position.m  perp_transport.m  plasmaplots.m  plot_spectrum.m  process_transcar.m  process_transcar2.m  process_transcar_topside.m  read_diffnumflux.m  read_excrates.m  read_fluidmod.m  read_input.m  read_kinmod.m  read_tra.m  set_position.m  subtightplot.m  sumplot_conduct.m  (+8 more)
optical_inversions/: NIR_inversion.m
optical_inversions/ISR_proc/: barker_analyze.m  isdiff.m  isplot_barker.m  isplot_barker_corr.m  isplot_barker_corr_wsim.m  isr_plasma_img.m  isr_plasma_img_11Feb2002.m  isr_plasma_img_11Feb2002_wsim.m
optical_inversions/IS_sim/: Integral.m  isr.m
optical_inversions/archive/: NIR_inversion.m  reconstruct_plasma.m  reconstruct_plasma_img.m
optical_inversions/kernel_build/: VER_calc.m  VERkernel_plot.m  beam_intensity_plot.m  kernel_build.m  kernel_build_BG3.m  kernel_build_NIR.m  kernel_plot.m  kernel_resample.m  process_beams.m
src/transcar/: __init__.py  base.py  io.py
tests/: test.py  test_E1E2prev.csv  test_all.py
tests/beam947.2/: trace_conv
transcar/: __init__.py  base.py  beamRunner.sh  checkoutcome.sh  io.py  run_beams_parallel.sh  transcar_run.py  transcar_run.sh
transcar/dir.mfiles/: cp4.m  trace_conv.m  tube_path.m
transcar/dir.source/: CMakeLists.txt  Makefile  reacrates.f  reacrates.f90  transconvec_13.op.f
transcar/dir.source/dir.cine/: conduc.f  dE_dt.f  degrad.f  disort.f  ecr.f  felin.op.f  flux_val.f  iniflu.f  lect.f  low_proton.f  misc.f  prot.f  quel_flux.f  quelle_grille.f  solflux.f  trans.op.f  transelec.op.f
transcar/dir.source/dir.cine/dir.iri/: cira86_pour_iri.f  irif12.f  iris12.f
transcar/dir.source/dir.convection/: conv_ar.f  convec.f  convec_1.f  tube.f
transcar/dir.source/dir.fluide/: atmos.op.f  coskhi.f  courant_time.f  fchap.f  jour_mois.f  msis90.f  vent.f
transcar/dir.source/dir.geomag/: lec_indices.f90  magfild.f  shellig.f
transcar/dir.source/dir.imm/: IMM2.f90  IMM_routines.f90
transcar/dir.source/dir.include/: TRANSPORT.INC  comm.f  comm.f90  comm_sp.f
transcar/dir.source/dir.modif/: prec_time.f  precipitation.f  read_ini.f90  source_chimie.f  tempo.f  tempo2.f
transcar/dir.source/dir.numeric/: lcpfct.f  pas_de_temps.f
transcar/dir.source/dir.projection/: coef_cour.f  coef_pot.f  coef_prec.f  courant.f90  potentiel.f90  projection.f90  val_fit.f90
transcar/dir.source/dir.system/: architecture.f90  isnan.f90  pwd.f  pwd.f90
transcar/dir.source/optimisation/: continuite.f  momentum.f  momentum.f90
(+92 files in other folders)
