[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcar"
version = "1.0.0"
description = "Parallel-executing Transcar 1-D particle precipitation ionospheric model."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = [
	"mesosphere",
	"ionosphere",
	"particle penetration",
	"energy degradation",
	"aurora",
	"thermosphere",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: Science/Research",
	"Operating System :: OS Independent",
	"Programming Language :: Fortran",
	"Programming Language :: Python :: 3",
	"Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
	"pandas",
	"transcarread",
]

[project.optional-dependencies]
tests = [
	"pytest",
	"mypy",
]

[tool.setuptools]
script-files = [
	"MonoenergeticBeams.py",
	"SpectrumBeam.py",
	"CheckOutput.py",
]

[tool.black]
line-length = 132

[tool.mypy]
files = ["."]

ignore_missing_imports = true
strict_optional = false
