[metadata]
name = lowtran
version = 0.2.0
author = Michael Hirsch, Ph.D.
description = Parallel-executing Transcar 1-D particle precipitation ionospheric model..
url = https://github.com/scivision/transcar
keywords =
  mesosphere
  ionosphere
  particle penetration
  energy degradation
  aurora
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  pandas
  transcarread

[options.extras_require]
tests =
  pytest
  pytest-cov
  coveralls
  flake8
  mypy


[options.entry_points]
console_scripts =
  transcar = RunTranscar:main

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*
  */transcarread/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  except RuntimeError
  except NotImplementedError
  except ImportError
  except FileNotFoundError
  except CalledProcessError
  logging.warning
  logging.error
  logging.critical
  if __name__ == .__main__.:
