[metadata]
name = transcar
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@noreply.users.github.com
description = Parallel-executing Transcar 1-D particle precipitation ionospheric model.
url = https://github.com/space-physics/transcar
keywords =
  mesosphere
  ionosphere
  particle penetration
  energy degradation
  aurora
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
packages = find:
scripts =
  RunTranscar.py
  CheckOutput.py
install_requires =
  pandas
  transcarread

[options.extras_require]
tests =
  pytest
cov =
  pytest-cov
  coveralls
  flake8
  mypy


[options.entry_points]
console_scripts =
  transcar = RunTranscar:main
